# rlVoxel

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  imgui.ini
assets/shaders/: cutout.fs  cutout.vs  opaque_ao.vs
assets/shaders/100/: opaque_ao.fs  opaque_ao.vs  translucent.fs
assets/shaders/120/: opaque_ao.fs  opaque_ao.vs  translucent.fs
assets/shaders/330/: opaque_ao.fs  opaque_ao.vs  translucent.fs  translucent.vs
assets/shaders/postprocessing/: fxaa.fs
docs/: NETWORKING.md  NET_PROFILER.md  RENDERING.md  SYSTEMS.md  UI.md
libnet/: CMakeLists.txt
libnet/include/net/: net.h  protocol.h  transport.h
libnet/src/: net.c  protocol.c  transport.c
libui/: CMakeLists.txt
libui/include/ui/: ui.h
libui/src/: ui.c
libvoxel/: CMakeLists.txt
libvoxel/include/voxel/: block.h  chunk.h  chunkmap.h  mesher.h
libvoxel/src/: block.c  chunk.c  mesher.c
raylib-cimgui/: CMakeLists.txt  rlcimgui.c
src/: app.c  constants.h
src/diagnostics/: net_profiler.c  net_profiler.h  process_stats.c  process_stats.h  telemetry.c  telemetry.h
src/game/: game.c  game.h  game_input.c  game_input.h  player.c  player.h  raycast.c  raycast.h
src/gfx/: clouds.c  clouds.h  renderer.c  renderer.h  selection_highlight.c  selection_highlight.h  shader_paths.c  shader_paths.h
src/math/: noise.c  noise.h  random.c  random.h
src/physics/: physics.c  physics.h
src/profiling/: profiler.c  profiler.h  profiler_renderer.c  profiler_renderer.h
src/server/: server_core.c  server_core.h  server_main.c
src/ui/: hud.c  hud.h
src/world/: blocks.c  blocks.h  chunk.c  chunk.h  lighting.c  lighting.h  mesher.c  mesher.h  world.c  world.h  worldgen.c  worldgen.h
